<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/surface_card_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_card">

        <!-- Name / description Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_quick_add_name"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_card_small"
            android:hint="@string/quick_add_hint_name"
            app:errorEnabled="true"
            app:boxCornerRadiusBottomEnd="@dimen/radius_card_small"
            app:boxCornerRadiusBottomStart="@dimen/radius_card_small"
            app:boxCornerRadiusTopEnd="@dimen/radius_card_small"
            app:boxCornerRadiusTopStart="@dimen/radius_card_small">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_quick_add_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="100"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Calories Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_quick_add_calories"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_card_small"
            android:hint="@string/quick_add_hint_calories"
            app:errorEnabled="true"
            app:boxCornerRadiusBottomEnd="@dimen/radius_card_small"
            app:boxCornerRadiusBottomStart="@dimen/radius_card_small"
            app:boxCornerRadiusTopEnd="@dimen/radius_card_small"
            app:boxCornerRadiusTopStart="@dimen/radius_card_small">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_quick_add_calories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFeatureSettings="tnum"
                android:inputType="numberDecimal"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Protein Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_quick_add_protein"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_card_small"
            android:hint="@string/quick_add_hint_protein"
            app:errorEnabled="true"
            app:boxCornerRadiusBottomEnd="@dimen/radius_card_small"
            app:boxCornerRadiusBottomStart="@dimen/radius_card_small"
            app:boxCornerRadiusTopEnd="@dimen/radius_card_small"
            app:boxCornerRadiusTopStart="@dimen/radius_card_small">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_quick_add_protein"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFeatureSettings="tnum"
                android:inputType="numberDecimal"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Carbs Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_quick_add_carbs"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_card_small"
            android:hint="@string/quick_add_hint_carbs"
            app:errorEnabled="true"
            app:boxCornerRadiusBottomEnd="@dimen/radius_card_small"
            app:boxCornerRadiusBottomStart="@dimen/radius_card_small"
            app:boxCornerRadiusTopEnd="@dimen/radius_card_small"
            app:boxCornerRadiusTopStart="@dimen/radius_card_small">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_quick_add_carbs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFeatureSettings="tnum"
                android:inputType="numberDecimal"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Fat Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_quick_add_fat"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_card_small"
            android:hint="@string/quick_add_hint_fat"
            app:errorEnabled="true"
            app:boxCornerRadiusBottomEnd="@dimen/radius_card_small"
            app:boxCornerRadiusBottomStart="@dimen/radius_card_small"
            app:boxCornerRadiusTopEnd="@dimen/radius_card_small"
            app:boxCornerRadiusTopStart="@dimen/radius_card_small">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_quick_add_fat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFeatureSettings="tnum"
                android:inputType="numberDecimal"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Meal Slot Selector Dropdown -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_meal_slot"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quick_add_hint_meal_slot"
            app:errorEnabled="true"
            app:boxCornerRadiusBottomEnd="@dimen/radius_card_small"
            app:boxCornerRadiusBottomStart="@dimen/radius_card_small"
            app:boxCornerRadiusTopEnd="@dimen/radius_card_small"
            app:boxCornerRadiusTopStart="@dimen/radius_card_small">

            <AutoCompleteTextView
                android:id="@+id/spinner_meal_slot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</ScrollView>
